FIX plxUtils::urlify() (url_encode bugfix) #577 (bazooka07)
FIX plxUtils::testModRewrite #573 (bazooka07)
FIX i18n: Occitan translations #567 (ensag-dev)
FIX i18n: Occitan translations #664 (Mejans)
FIX plxShow::staticInclude #575 (bazooka07)
FIX regex for moderated comms in backoffice, misc. optimizations on comments #572 (bazooka07)
FIX php 8.2 compatibility in plxUtils _printSelectDir: Warning: Cannot modify header information #671 (FrancoisThareau)
FIX php 8.1 compatibility and improvements to plxUtils::makeThumb #661 (sudwebdesign)

## PLUXML 5.8.9 (2022/08/01) ##
REVERT v5.8.8 FIX Static pages PHP injection vulnerability #558 (P3ter, Moritz Huppert)

## PLUXML 5.8.8 (2022/07/29) ##
FIX Delete install.php link and redirect fixed for all administration pages #540 (P3ter)
FIX Sitemap lastmod attribute is now set with the modification date #541 (gcyrillus, P3ter)
FIX Filter articles, comments and pages names in plxGlob #383 #545 (bazooka07)
FIX PHP8 __Deprecated: Required parameter $conf follows optional parameter $isHtml #537 (MAPC2012, Francis)
FIX Force some values of $plxMotor->aConf[] to be integer #552 (bazooka07)
FIX Minor fix in PlxMotor function artInfoFromFilename #554 (gcyrillus, bazooka07)
FIX Article thumbnail XSS vulnerability #556 (P3ter, Moritz Huppert)
FIX PluXml Documentation link for e-mail service configuration (P3ter)

## PLUXML 5.8.7 (2021/06/03) ##
[+] Move plugins cached css files to data folder #526 (bazooka07)
[+] Open static page from administration in a new tab #532 (bazooka07)
[+] i18n Occitan correction #535 (Mejans)
[+] PHPMailer update to 6.4.1 (P3ter)
FIX Comments no more displayed with PHP8 #529 (bazooka07)
FIX Revert .htaccess generation for plugins compatibility with url rewrite (P3ter)
FIX Wrong use of uasort() in pages and categories edition #530 (bazooka07)
FIX Display 404 error page when switching to a theme with a missing template #533 (bazooka07)
FIX Category creation can replace an existing category #534 (bazooka07)