@@ -8,8 +8,9 @@ FIX i18n: Occitan translations #567 (ensag-dev)
 FIX i18n: Occitan translations #664 (Mejans)
 FIX plxShow::staticInclude #575 (bazooka07)
 FIX regex for moderated comms in backoffice, misc. optimizations on comments #572 (bazooka07)
-FIX php 8.2 compatibility in plxUtils _printSelectDir: Warning: Cannot modify header information #671 (FrancoisThareau)
 FIX php 8.1 compatibility and improvements to plxUtils::makeThumb #661 (sudwebdesign)
+FIX php 8.2 compatibility in plxUtils _printSelectDir: Warning: Cannot modify header information #671 (FrancoisThareau)
+FIX php 8.2 compatibility in plxMotor: Creation of dynamic property plxMotor::$cibleName is deprecated #666 (haruka, Txori)
 
 ## PLUXML 5.8.9 (2022/08/01) ##
 REVERT v5.8.8 FIX Static pages PHP injection vulnerability #558 (P3ter, Moritz Huppert)
